--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,12 @@
 {
-    "python.formatting.provider": "black"
+    "python.formatting.provider": "autopep8",
+    "sqltools.connections": [
+        {
+            "previewLimit": 50,
+            "driver": "SQLite",
+            "name": "XP Testing",
+            "database": "${workspaceFolder:donutbot}/data/db/xp.db"
+        }
+    ],
+    "sqltools.useNodeRuntime": true
 }
